--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-avif": "^1.0.1",
     "gulp-imagemin": "^7.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "postcss": "^8.4.5",
     "sass": "^1.49.0"
